--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,10 @@ RewriteCond %{REQUEST_FILENAME}\.html -f
 
 RewriteRule ^(.*)$ $1.html [NC, L]
 
+RewriteCond %{REQUEST_FILENAME}\.php -f
+
+RewriteRule ^(.*)$ $1.php [NC, L]
+
 # Set directory index to home
 
 DirectoryIndex home.html
